plaaying with swift ui

--- a/android/startcomposin/app/src/main/res/values/strings.xml
+++ b/android/startcomposin/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">start-composin</string>
+    <string name="title_activity_session">My Compose App</string>
 </resources>
